# meteo-forecast

./: Cargo.toml  Dockerfile  README.md  clippy.toml
resources/: localidades.xsd
src/: dto.rs  main.rs
