[package]
name = "meteo-forecast"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.37", features = ["serialize"] }
serde_json = "1.0"
base64 = "0.22"
encoding_rs = "0.8"
log = "0.4"
env_logger = "0.11.8"
